# python-katas

./: .gitignore  LICENSE  README.md  setup.py  sql-file-to-update.sql  sql-update-example.sql
bowling/2017_06_13/: bowling.py  bowling_test.py
bowling/a_bowling/: bowling.py  bowling_test.py
bowling/iteration_a/: bowling_test.py
courses/python_bootcamp/: functions.py  variables.py
fizz_buzz/: README.md
fizz_buzz/01/: fizz_buzz_test.py
fizz_buzz/iteration_a/: fizz_buzz.py
head_first/chapter_1/: beer_song.py  odd2.py
head_first/chapter_2/: panic.py  panic2.py  panic2_book.py  vowels.py
head_first/chapter_3/: vowels7.py
hello_world/iteration_a/: hello_world_test.py
hello_world/iteration_b/: hello_world_test.py
kata/bowling/: README.md  bowling.py  bowling_test.py
kata/breakwall/: breakwall.py  breakwall_test.py
kata/fizz_buzz/: README.md  fizz_buzz.py  fizz_buzz_test.py
kata/game_of_life/: README.md  game_of_life.py  game_of_life_test.py
kata/gilded_rose/: .coveragerc  .gitignore  README.md  gilded_rose.py  gilded_rose_test.py  main.py  pyproject.toml  ruff_defaults.toml
kata/gilded_rose/src/: gilded_rose.py  gilded_rose_test.py  item.py
kata/hello_world/: README.md
kata/mine_sweeper/: README.md  mine_sweeper.py  mine_sweeper_test.py
kata/parse_string_time/: README.md  parse_string_time.py  parse_string_time_test.py
kata/programming_101/: README.md  find_number.py  find_number_2.py  seach_string.py
kata_solutions/parse_string_time/: README.md
sandbox/: csv_to_mssql_insert.py  mock_super_init.py
(+75 files in other folders)
